"added project section "

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <a href="#skills" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
             <p>SKILLS</p>
         </a>
-        <a href="#blog" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-            <p>BLOG</p>
+        <a href="publication.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+            <p>PROJECT</p>
         </a>
         <a href="#resume" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
             <p>RESUME</p>
@@ -45,7 +45,7 @@
           <a href="#home" class="w3-bar-item w3-button w3-hover-black">HOME</a>
           <a href="#about" class="w3-bar-item w3-button w3-hover-black">ABOUT</a>
           <a href="#skills" class="w3-bar-item w3-button w3-hover-black">SKILLS</a>
-          <a href="#blog" class="w3-bar-item w3-button w3-hover-black">BLOG</a>
+          <a href="publication.html" class="w3-bar-item w3-button w3-hover-black">PROJECT</a>
           <a href="#resume" class="w3-bar-item w3-button w3-hover-black">RESUME</a>
           <a href="#contact" class="w3-bar-item w3-button w3-hover-black">CONTACT</a>
         </div>
@@ -137,6 +137,13 @@ information for forensic investigation
                 </div>
             </div>
         </div>
+         <!-- Project Section -->
+         <div class="w3-content w3-justify w3-text-grey w3-padding-40" id="resume">
+            <h2 class="w3-text-light-grey">RESUME:</h2>
+            <p ><b>View My Resumey</b></p>
+            <div style="padding-top: 10px;"><button class="btn"><a target= _blank href="https://drive.google.com/file/d/1Z9vcF272v9e6oyDgHhfrZED5Yu5iy0ON/view?usp=share_link">View</a></button>
+            </div>
+        </div>
 
             <!-- resume Section -->
             <div class="w3-content w3-justify w3-text-grey w3-padding-40" id="resume">
@@ -151,9 +158,6 @@ information for forensic investigation
                 <h2 class="w3-text-light-grey">CONTACT:</h2>
                 MAIL ID: yugendhard346@gmail.com<br>
                     Phone No: 7598898202<br>
-        
-
-                
             </div>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/yugendhar-d/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
