--- a/publication.html
+++ b/publication.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>My Paper</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <script src="https://kit.fontawesome.com/32c224fcca.js" crossorigin="anonymous"></script>
     <style>
       /* Center the main div box */
       #main {
@@ -41,10 +43,15 @@
       <p style="text-align: justify;">
         This paper presents a Python-based backdoor tool that can be used for security testing purposes. The tool is designed to provide remote access to a target system within the same network. The tool was developed with the objective of helping security professionals to test the vulnerability of their systems against potential backdoor attacks. The paper provides a detailed description of the tool's design and implementation, as well as a discussion of its effectiveness compared to other backdoors. The testing results show that the tool can provide remote access to a target system without being detected by commonly used security tools.
       <P> <b>Keywords:</b>Python backdoor, security testing, remote access, vulnerability testing</P>
-
-      </p>
+      <p style="text-align: center;">Check out my project on GitHub! You can view the code and documentation <br> <a href="https://github.com/Yugi71120/python-backdoor"><i class="fa-brands fa-github" style="color: blue;">click here</i> </a> <br> Don't forget to leave a star if you find it helpful!</p>
       <a href="Documents/python backdoor .pdf" class="button" target="_blank">View PDF</a>
       <a href="Documents/python backdoor .pdf" class="button" download>Download PDF</a>
+      <div style="display: flex; justify-content: center;">
+      <a href="https://www.linkedin.com/in/yugendhar-d/" target="_blank" rel="noopener noreferrer" style="color: black;"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/i_m_h_a_a_r_p/" target="_blank" rel="noopener noreferrer" style="color: black;"><i class="fa-brands fa-square-instagram"></i></a>
+      <a href="https://github.com/Yugi71120 " target="_blank" rel="noopener noreferrer" style="color: black;"><i class="fa-brands fa-github"></i></a>
+      <a href="https://twitter.com/yugendhar_d" target="_blank" rel="noopener noreferrer" style="color: black;"><i class="fab fa-twitter"></i></a>
+      </div>
     </div>
   </body>
 </html>
