--- a/publication.html
+++ b/publication.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Paper</title>
+    <title>Project</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <script src="https://kit.fontawesome.com/32c224fcca.js" crossorigin="anonymous"></script>
     <style>
