--- a/publication.html
+++ b/publication.html
@@ -14,7 +14,7 @@
         border: 2px solid black;
         background-color:white;
       }
-      
+
       /* Style the buttons */
       .button {
         display: inline-block;
@@ -33,6 +33,14 @@
       .button:hover {
         background-color: #3e8e41;
       }
+
+      @media screen and (max-width: 600px) {
+        #main {
+          width: 90%;
+        }
+      }
+
+
     </style>
   </head>
   <body style="background-color:black">
