"url error fixed"

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#skills" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
             <p>SKILLS</p>
         </a>
-        <a href="publication.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+        <a href="project.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
             <p>PROJECT</p>
         </a>
         <a href="#resume" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
@@ -45,7 +45,7 @@
           <a href="#home" class="w3-bar-item w3-button w3-hover-black">HOME</a>
           <a href="#about" class="w3-bar-item w3-button w3-hover-black">ABOUT</a>
           <a href="#skills" class="w3-bar-item w3-button w3-hover-black">SKILLS</a>
-          <a href="publication.html" class="w3-bar-item w3-button w3-hover-black">PROJECT</a>
+          <a href="project.html" class="w3-bar-item w3-button w3-hover-black">PROJECT</a>
           <a href="#resume" class="w3-bar-item w3-button w3-hover-black">RESUME</a>
           <a href="#contact" class="w3-bar-item w3-button w3-hover-black">CONTACT</a>
         </div>
