--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
   padding: 20px;
   border: 2px solid black;
   background-color: white;
-  font-size: small;
+  font-size: medium;
 }
 
 /* Style the buttons */
@@ -39,6 +39,7 @@
   #main {
     max-width: 90%;
     padding: 10px;
+    font-size: small;
   }
 }
 
