--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
   padding: 20px;
   border: 2px solid black;
   background-color: white;
-  font-size: medium;
+  font-size: small;
 }
 
 /* Style the buttons */
