--- a/project.html
+++ b/project.html
@@ -9,11 +9,11 @@
      #main {
   margin: 0 auto;
   height: auto;
-  max-width: 700px;
+  max-width: 800px;
   padding: 20px;
   border: 2px solid black;
   background-color: white;
-  font-size: 16px;
+  font-size: medium;
 }
 
 /* Style the buttons */
@@ -39,7 +39,7 @@
   #main {
     max-width: 90%;
     padding: 10px;
-    font-size: 14px;
+    font-size:small;
   }
 }
 
@@ -47,7 +47,7 @@
   #main {
     max-width: 90%;
     padding: 10px;
-    font-size: 12px;
+   font-size: small;
   }
   .button {
     font-size: 14px;
