--- a/project.html
+++ b/project.html
@@ -13,6 +13,7 @@
   padding: 20px;
   border: 2px solid black;
   background-color: white;
+  font-size: medium;
 }
 
 /* Style the buttons */
@@ -38,6 +39,7 @@
   #main {
     max-width: 90%;
     padding: 10px;
+    font-size: 13;
   }
 }
 
@@ -45,6 +47,7 @@
   #main {
     max-width: 90%;
     padding: 10px;
+    font-size: 12;
   }
   .button {
     font-size: 14px;
