--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
   padding: 20px;
   border: 2px solid black;
   background-color: white;
-  font-size: medium;
+  font-size: small;
 }
 
 /* Style the buttons */
@@ -39,7 +39,6 @@
   #main {
     max-width: 90%;
     padding: 10px;
-    font-size: 13;
   }
 }
 
@@ -47,7 +46,6 @@
   #main {
     max-width: 90%;
     padding: 10px;
-    font-size: 12;
   }
   .button {
     font-size: 14px;
