--- a/project.html
+++ b/project.html
@@ -39,7 +39,7 @@
   #main {
     max-width: 90%;
     padding: 10px;
-    font-size: small;
+    font-size: 14px;
   }
 }
 
@@ -47,7 +47,7 @@
   #main {
     max-width: 90%;
     padding: 10px;
-    font-size: small;
+    font-size: 12px;
   }
   .button {
     font-size: 14px;
