--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
   padding: 20px;
   border: 2px solid black;
   background-color: white;
-  font-size: 15px;
+  font-size: 16px;
 
 }
 
@@ -26,7 +26,7 @@
   color: white;
   border: none;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 15px;
   cursor: pointer;
   text-decoration: none;
 }
@@ -62,9 +62,9 @@
       <h1 style="text-align: center;">Python Backdoor Implementation for Secure Penetration Testing in Local Networks</h1>
       <p style="text-align: center; color: black;">Author:Yugendhar D | Rathinam college of arts and science | <a href="https://yugi71120.github.io/Portfolio/">yugi71120.github.io</a></p>
       <h2>Abstract</h2>
-      <p style="text-align: justify; font-size:13px;">This paper presents a Python-based backdoor tool that can be used for security testing purposes. The tool is designed to provide remote access to a target system within the same network. The tool was developed with the objective of helping security professionals to test the vulnerability of their systems against potential backdoor attacks. The paper provides a detailed description of the tool's design and implementation, as well as a discussion of its effectiveness compared to other backdoors. The testing results show that the tool can provide remote access to a target system without being detected by commonly used security tools.</p>
-      <P style="font-size: 13px;"> <b>Keywords:</b>Python backdoor, security testing, remote access, vulnerability testing</P>
-      <p style="text-align: center;">Check out my project on GitHub! You can view the code and documentation <br> <a href="https://github.com/Yugi71120/python-backdoor"><i class="fa-brands fa-github" style="color: blue;">click here</i> </a> <br> Don't forget to leave a star if you find it helpful!</p>
+      <p style="text-align: justify; font-size:14px;">This paper presents a Python-based backdoor tool that can be used for security testing purposes. The tool is designed to provide remote access to a target system within the same network. The tool was developed with the objective of helping security professionals to test the vulnerability of their systems against potential backdoor attacks. The paper provides a detailed description of the tool's design and implementation, as well as a discussion of its effectiveness compared to other backdoors. The testing results show that the tool can provide remote access to a target system without being detected by commonly used security tools.</p>
+      <P style="font-size: 14px;"> <b>Keywords:</b>Python backdoor, security testing, remote access, vulnerability testing</P>
+      <p style="text-align: center; font-size: 14px;">Check out my project on GitHub! You can view the code and documentation <br> <a href="https://github.com/Yugi71120/python-backdoor"><i class="fa-brands fa-github" style="color: blue;">click here</i> </a> <br> Don't forget to leave a star if you find it helpful!</p>
       <a href="Documents/python backdoor .pdf" class="button" target="_blank"><b>View PDF</b> </a>
       <a href="Documents/python backdoor .pdf" class="button" download><b>Download PDF</b> </a>
       <div style="display: flex; justify-content: center;">
